--- a/templates/anty/index.html.twig
+++ b/templates/anty/index.html.twig
@@ -15,6 +15,7 @@
     <button id="startButton">Start Animation</button>
     <button id="pauseButton">Pause Animation</button>
     <canvas ></canvas>
+    <div id="ants"></div>
 
         
         
